# The-AI-Migration-Accelerator

./: .env.example  .gitignore  Containerfile  README.md  plan-aiMigrationAccelerator.checklist.prompt.md  plan-aiMigrationAccelerator.prompt.md  pyproject.toml
docs/: architecture.md
ops/: podman-compose.yml  seed_oracle.ps1  seed_oracle.sh  seed_oracle.sql  seed_oracle_2.sql
src/ai_migration_accelerator/: __init__.py  main.py
src/ai_migration_accelerator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ai_migration_accelerator/agents/: business_logic_agent.py  codegen_agent.py  execution_agent.py  infra_generator_agent.py  llm_advisor_agent.py  schema_analyzer.py  validation_agent.py
src/ai_migration_accelerator/api/: run_store.py
src/ai_migration_accelerator/api/routes/: artifacts.py  jobs.py
src/ai_migration_accelerator/connectors/: sqlalchemy_introspector.py
src/ai_migration_accelerator/connectors/oracle/: __init__.py  introspection.py
src/ai_migration_accelerator/control_plane/: __init__.py  schema_context_builder.py
src/ai_migration_accelerator/core/: settings.py
src/ai_migration_accelerator/generator/: render.py
src/ai_migration_accelerator/graph/: router.py  workflow.py
src/ai_migration_accelerator/models/: artifacts.py  contracts.py  state.py
src/ai_migration_accelerator/validation/: smoke.py
tests/unit/: test_analyzer_inference.py  test_api_routes.py  test_business_logic_agent.py  test_execution_agent.py  test_llm_advisor.py  test_oracle_ddl_parser.py  test_workflow.py
(+3 files in other folders)
